stopped OS choices from wrapping #199

--- a/src/site/css/dart-style.css
+++ b/src/site/css/dart-style.css
@@ -84,6 +84,10 @@ ul, li {
 	}
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 /* ***** Icons ***** */
 i[class*="sprite-icon-"] {
 	background-image: url(../imgs/dart-sprite.png);
